--- a/index.html
+++ b/index.html
@@ -46,15 +46,18 @@
 </ul>
 
 <p style="margin: 2em 0em 1em 0;">
+<div style="float:left;">
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
   <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
-</p>
+</div>
+
 <div style="float:right;">
   <span class='st_twitter_large' displayText='Tweet'></span> 
   <span class='st_linkedin_large' displayText='LinkedIn'></span> 
-  <span class='st_email_large' displayText='Email'></span> 
   <span class='st_reddit_large' displayText='Reddit'></span>
+  <span class='st_email_large' displayText='Email'></span> 
 </div>
+</p>
 
 <p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
   <img style=" max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="Open demo in new tab">
