--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <div style="margin: 2em 0em 1em 0;">
   <div style="float:left;">
-    <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=false&amp;size=small" height="30" width="110" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
-    <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=false&amp;size=small" height="30" width="100" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
+    <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=watch&amp;count=false&amp;size=large" height="30" width="110" frameborder="0" scrolling="0" style="width:110px; height: 30px;" allowtransparency="true"></iframe>
+    <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=false&amp;size=large" height="30" width="100" frameborder="0" scrolling="0" style="width:100px; height: 30px;" allowtransparency="true"></iframe>
   </div>
   
   <div style="float:right;">
