--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- ShareThis Scripts -->
-    <!--<script type="text/javascript">var switchTo5x=true;</script>-->
-    <!--<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>-->
-    <!--<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>-->
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
   </head>
 <body>
 
