--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section>
 <ul>
   <li>Host it on your own domain</li>
-  <li>Can only be singed once</li>
+  <li>Can only be signed once</li>
   <li>The resulting document can be downloaded as a PDF</li>
 </ul>
 
