--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <footer>
   <hr>
-  <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">View repo</a></p>
+  <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">Open repository.</a></p>
 </footer>
 
 </article>
