--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=generator/">
+    <meta http-equiv="refresh" content="0;url=http://nonsalant.github.io/contract/">
   </head>
 </html>
 
