--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   </div>
 </div>
 
-<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
-  <img style=" max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="Open demo in new tab">
+<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="" title="Generate a new contract">
+  <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">
 </a></p>
 
 <p style="text-align:center;">
