--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
 </div>
 
-<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="" title="Generate a new contract">
+<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
   <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">
 </a></p>
 
@@ -70,11 +70,11 @@
         border-bottom: solid 1px #ccc;
         margin-right: 1em;
     ">
-    <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab" >
+    <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open in a new tab" >
       View demo &amp; test signature
     </a>
   </span>
-  <a class="button" href="http://vileworks.com/contract/generator/" target="_blank" title="Open in a new tab">Generate a new contract</a>
+  <a class="button" href="http://vileworks.com/contract/generator/" target="" title="Generate a new contract">Generate a new contract</a>
 </p>
 
 </section>
