--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
   </div>
 </div>
 
-<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open demo in new tab">
-  <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">
+<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.html" target="_blank" title="Demo">
+  <!--<img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">-->
+  <img style="max-width:614px;" src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-demo.gif" />
 </a></p>
 
 <p style="text-align:center;">
@@ -70,8 +71,8 @@
         border-bottom: solid 1px #ccc;
         margin-right: 1em;
     ">
-    <a href="http://vileworks.com/contract/demo.php" target="_blank" title="Open in a new tab" >
-      View demo &amp; test signature
+    <a href="http://vileworks.com/contract/demo.html" target="_blank" title="Demo" >
+      View demo
     </a>
   </span>
   <a class="button" href="http://vileworks.com/contract/generator/" target="" title="Generate a new contract">Generate a new contract</a>
