--- a/index.html
+++ b/index.html
@@ -45,39 +45,41 @@
   <li>The resulting document can be downloaded as a PDF</li>
 </ul>
 
-<div style="margin: 2em 0em 1em 0;">
+<hr><div style="/* margin: 2em 0em 1em 0; */margin: 0;/* vertical-align: middle; *//* float: left; */">
   <div style="float:left;">
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
   
   <div style="float:right;">
-    <span class='st_twitter_large' displayText='Tweet'></span> 
-    <span class='st_linkedin_large' displayText='LinkedIn'></span> 
-    <span class='st_reddit_large' displayText='Reddit'></span>
-    <span class='st_email_large' displayText='Email'></span> 
+    <span class="st_twitter_large" displaytext="Tweet"></span> 
+    <span class="st_linkedin_large" displaytext="LinkedIn"></span> 
+    <span class="st_reddit_large" displaytext="Reddit"></span>
+    <span class="st_email_large" displaytext="Email"></span> 
   </div>
 </div>
 
-<p style="text-align: center;"><a href="http://vileworks.com/contract/demo.html" target="_blank" title="Demo">
-  <!--<img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">-->
-  <img style="max-width:614px;" src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-demo.gif" />
+<p style="text-align: center;"><a href="http://vileworks.com/contract/generator/" title="Generate a new contract">
+  <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">
 </a></p>
 
-<p style="text-align:center;">
+<hr style="
+    margin-top: 0;
+"><p style="text-align:center;">
   <span style="
         font-size: 1.15em;
         line-height: 1rem;
         border-bottom: solid 1px #ccc;
         margin-right: 1em;
     ">
-    <a href="http://vileworks.com/contract/demo.html" target="_blank" title="Demo" >
+    <a href="http://vileworks.com/contract/demo.html" target="_blank" title="Demo">
       View demo
     </a>
   </span>
   <a class="button" href="http://vileworks.com/contract/generator/" target="" title="Generate a new contract">Generate a new contract</a>
-</p>
-
+</p> <hr>
+  <p>
+  <img style="max-width:614px;" src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-demo.gif"></p>
 </section>
 
 <footer>
