--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </article>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="http://tinymce.cachefly.net/4.0/tinymce.min.js"></script>
+<script src="http://vileworks.com/combined.js"></script>
 <script>
   // Nice Scroll
   $('body').niceScroll({
