--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   
   // Scroll Snap to editor
   $(document).scrollsnap({
-    snaps: 'hr',
+    snaps: '#content',
     proximity: 85
   });
   
