--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   
   // Scroll Snap to editor
   $(document).scrollsnap({
-    snaps: '#content',
-    proximity: 85
+    snaps: '#content, .top-menu',
+    proximity: 10
   });
   
   // Lazy Load
