--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   
   // Scroll Snap to editor
   $(document).scrollsnap({
-    snaps: '#content, .top-menu',
+    snaps: '#content, .top-menu, hr',
     proximity: 10
   });
   
