--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Signable contract.php</title>
+    <title>FTP Contract</title>
     <link rel="shortcut icon" href="http://vileworks.com/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -33,7 +33,7 @@
 <header>
   <h1>
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-    Signable contract.php
+    FTP Contract
   </h1>
   <h2>Generate an electronically signable contract that lives in a single .php file</h2>
 </header>
