--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         border-bottom: solid 1px #ccc;
         margin-right: 1em;
     ">
-    <a href="http://vileworks.com/contract/demo.html" target="_blank" title="Demo">
+    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
       View demo
     </a>
   </span>
