--- a/index.html
+++ b/index.html
@@ -82,8 +82,19 @@
 
 <hr>
 <p>
-  <img style="max-width:614px;" src="https://dl.dropboxusercontent.com/u/19848482/vileworks/demo.gif">
+  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
+    <img style="max-width:614px;" src="https://dl.dropboxusercontent.com/u/19848482/vileworks/demo.gif">
+  </a>
 </p>
+
+<hr>
+<iframe src="http://redditjs.com/embed?width=600&amp;height=500&amp;postFinder=mostComments&amp;cssTheme=light&amp;showSubmit=true&amp;embedId=3qzht6&amp;url=http://nonsalant.github.io/contract/" 
+  frameborder="0" 
+  style="border:solid 1px #ccc;
+    width:100%; 
+    height:600px;
+    max-height:90vh;">
+</iframe>
 </section>
 
 <footer>
