--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <hr>
 <p>
   <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
-    <img style="max-width:614px;" src="https://dl.dropboxusercontent.com/u/19848482/vileworks/demo.gif">
+    <img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/demo.gif">
   </a>
 </p>
 
@@ -141,9 +141,9 @@
   } catch(err) {}
 </script>
 
-<!-- ShareThis Scripts -->
-<!--<script type="text/javascript">var switchTo5x=true;</script>-->
-<!--<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>-->
-<!--<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>-->
+ ShareThis Scripts 
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </body>
 </html>
