--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
   
-  <div style="float:right;">
+  <div style="float:right; display:none; ">
     <span class="st_twitter_large" displaytext="Tweet"></span> 
     <span class="st_linkedin_large" displaytext="LinkedIn"></span> 
     <span class="st_reddit_large" displaytext="Reddit"></span>
@@ -141,9 +141,17 @@
   } catch(err) {}
 </script>
 
- ShareThis Scripts 
+<!-- ShareThis Buttons -->
+<span class='st_reddit_hcount' displayText='Reddit'></span>
+<span class='st_twitter_hcount' displayText='Tweet'></span>
+<span class='st_facebook_hcount' displayText='Facebook'></span>
+<span class='st_googleplus_hcount' displayText='Google +'></span>
+<span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+<span class='st_email_hcount' displayText='Email'></span>
+
+ <!--ShareThis Scripts -->
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: true, hashAddressBar: true});</script>
 </body>
 </html>
