--- a/index.html
+++ b/index.html
@@ -154,8 +154,11 @@
 
 
  <!--ShareThis Scripts -->
+<!--<script type="text/javascript">var switchTo5x=true;</script>-->
+<!--<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>-->
+<!--<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: true, hashAddressBar: true});</script>-->
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: true, hashAddressBar: true});</script>
+<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </body>
 </html>
