--- a/index.html
+++ b/index.html
@@ -87,29 +87,28 @@
   </a>
 </p>
 
-<hr>
-<!-- ShareThis Buttons -->
-<span class='st_reddit_hcount' displayText='Reddit'></span>
-<span class='st_twitter_hcount' displayText='Tweet'></span>
-<span class='st_facebook_hcount' displayText='Facebook'></span>
-<span class='st_googleplus_hcount' displayText='Google +'></span>
-<span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-<span class='st_email_hcount' displayText='Email'></span>
-
-<hr>
-<iframe src="http://redditjs.com/embed?width=600&amp;height=500&amp;postFinder=mostComments&amp;cssTheme=light&amp;showSubmit=true&amp;embedId=3qzht6&amp;url=http://nonsalant.github.io/contract/" 
-  frameborder="0" 
-  style="border:solid 1px #ccc;
-    width:100%; 
-    height:600px;
-    max-height:90vh;">
-</iframe>
+<!--<hr>-->
+<!--<iframe src="http://redditjs.com/embed?width=600&amp;height=500&amp;postFinder=mostComments&amp;cssTheme=light&amp;showSubmit=true&amp;embedId=3qzht6&amp;url=http://nonsalant.github.io/contract/" -->
+<!--  frameborder="0" -->
+<!--  style="border:solid 1px #ccc;-->
+<!--    width:100%; -->
+<!--    height:600px;-->
+<!--    max-height:90vh;">-->
+<!--</iframe>-->
 
 </section>
 
 <footer>
   <hr>
   <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">Open repository.</a></p>
+  <hr>
+  <!-- ShareThis Buttons -->
+  <span class='st_reddit_hcount' displayText='Reddit'></span>
+  <span class='st_twitter_hcount' displayText='Tweet'></span>
+  <span class='st_facebook_hcount' displayText='Facebook'></span>
+  <span class='st_googleplus_hcount' displayText='Google +'></span>
+  <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+  <span class='st_email_hcount' displayText='Email'></span>
 </footer>
 
 </article>
