--- a/index.html
+++ b/index.html
@@ -45,18 +45,19 @@
   <li>The resulting document can be downloaded as a PDF</li>
 </ul>
 
-<hr><div style="/* margin: 2em 0em 1em 0; */margin: 0;/* vertical-align: middle; *//* float: left; */">
+<hr>
+<div style="/* margin: 2em 0em 1em 0; */margin: 0;/* vertical-align: middle; *//* float: left; */">
   <div style="float:left;">
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
   
-  <div style="float:right; display:none; ">
-    <span class="st_twitter_large" displaytext="Tweet"></span> 
-    <span class="st_linkedin_large" displaytext="LinkedIn"></span> 
-    <span class="st_reddit_large" displaytext="Reddit"></span>
-    <span class="st_email_large" displaytext="Email"></span> 
-  </div>
+  <!--<div style="float:right; display:none; ">-->
+  <!--  <span class="st_twitter_large" displaytext="Tweet"></span> -->
+  <!--  <span class="st_linkedin_large" displaytext="LinkedIn"></span> -->
+  <!--  <span class="st_reddit_large" displaytext="Reddit"></span>-->
+  <!--  <span class="st_email_large" displaytext="Email"></span> -->
+  <!--</div>-->
 </div>
 
 <p style="text-align: center;"><a href="http://vileworks.com/contract/generator/" title="Generate a new contract">
@@ -101,14 +102,14 @@
 <footer>
   <hr>
   <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">Open repository.</a></p>
-  <hr>
+  <!--<hr>-->
   <!-- ShareThis Buttons -->
-  <span class='st_reddit_hcount' displayText='Reddit'></span>
-  <span class='st_twitter_hcount' displayText='Tweet'></span>
-  <span class='st_facebook_hcount' displayText='Facebook'></span>
-  <span class='st_googleplus_hcount' displayText='Google +'></span>
-  <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-  <span class='st_email_hcount' displayText='Email'></span>
+  <!--<span class='st_reddit_hcount' displayText='Reddit'></span>-->
+  <!--<span class='st_twitter_hcount' displayText='Tweet'></span>-->
+  <!--<span class='st_facebook_hcount' displayText='Facebook'></span>-->
+  <!--<span class='st_googleplus_hcount' displayText='Google +'></span>-->
+  <!--<span class='st_linkedin_hcount' displayText='LinkedIn'></span>-->
+  <!--<span class='st_email_hcount' displayText='Email'></span>-->
 </footer>
 
 </article>
@@ -155,8 +156,8 @@
  <!--ShareThis Scripts -->
 <!-- http://www.sharethis.com/get-sharing-tools/ -->
 <!-- (buttons are above) -->
-<script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<!--<script type="text/javascript">var switchTo5x=true;</script>-->
+<!--<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>-->
+<!--<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>-->
 </body>
 </html>
