--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 <footer>
   <hr>
   <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">Open repository.</a></p>
-  <!--<hr>-->
+  <hr>
   <!-- ShareThis Buttons -->
-  <!--<span class='st_reddit_hcount' displayText='Reddit'></span>-->
-  <!--<span class='st_twitter_hcount' displayText='Tweet'></span>-->
+  <span class='st_reddit_hcount' displayText='Reddit'></span>
+  <span class='st_twitter_hcount' displayText='Tweet'></span>
   <!--<span class='st_facebook_hcount' displayText='Facebook'></span>-->
   <!--<span class='st_googleplus_hcount' displayText='Google +'></span>-->
-  <!--<span class='st_linkedin_hcount' displayText='LinkedIn'></span>-->
+  <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
   <!--<span class='st_email_hcount' displayText='Email'></span>-->
 </footer>
 
@@ -156,8 +156,8 @@
  <!--ShareThis Scripts -->
 <!-- http://www.sharethis.com/get-sharing-tools/ -->
 <!-- (buttons are above) -->
-<!--<script type="text/javascript">var switchTo5x=true;</script>-->
-<!--<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>-->
-<!--<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>-->
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "1471fad9-4296-4a64-83b2-91936221435a", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </body>
 </html>
