--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 </section>
 
-<footer>
+<footer class="footer">
   <hr>
   <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">Open repository.</a></p>
   <hr>
