--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
     FTP Contract
   </h1>
-  <h2>Generate an electronically signable contract that lives in a single .php file</h2>
+  <h2>Generate a signable contract that lives in a single php file</h2>
 </header>
 
 <section>
@@ -67,11 +67,10 @@
 <hr style="margin-top: 0;">
 <p style="text-align:center;">
   <span style="
-        font-size: 1.15em;
-        line-height: 1rem;
-        border-bottom: solid 1px #ccc;
-        margin-right: 1em;
-    ">
+    font-size: 1.15em;
+    line-height: 1rem;
+    border-bottom: solid 1px #ccc;
+    margin-right: 1em; ">
     <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
       View demo
     </a>
@@ -151,9 +150,7 @@
   } catch(err) {}
 </script>
 
-
-
- <!--ShareThis Scripts -->
+<!--ShareThis Scripts -->
 <!-- http://www.sharethis.com/get-sharing-tools/ -->
 <!-- (buttons are above) -->
 <script type="text/javascript">var switchTo5x=true;</script>
