--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
   <!--</div>-->
 </div>
 
-<p style="text-align: center;"><a href="http://vileworks.com/contract/generator/" title="Generate a new contract">
-  <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png" title="">
-</a></p>
+<p style="text-align: center;">
+  <a href="http://vileworks.com/contract/generator/" title="Generate a new contract">
+    <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png">
+  </a>
+</p>
 
 <hr style="margin-top: 0;">
 <p style="text-align:center;">
