--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -28,20 +28,6 @@
   </head>
 <body>
 
-<ul class="top-menu">
-<li class="currentt">
-  <a title="WP Support &amp; Development" href="http://vileworks.com" style="letter-spacing:.2em; font-size:1.1em;">
-    <span style="color:#bf7883; text-shadow:none;">
-      Vile</span><span style="font-weight:300;">Works
-    </span>
-  </a>
-</li>
-<li id="menu-item-1"><a title="WordPress Develoment Services" href="http://vileworks.com/services/">Services</a></li>
-<li id="menu-item-2"><a title="WordPress Design Portfolio" href="http://vileworks.com/portfolio/">Portfolio</a></li>
-<li id="menu-item-3"><a title="Resources &amp; Blog" href="http://vileworks.com/resources/">Resources</a></li>
-<li id="menu-item-4"><a title="Contact Us" href="http://vileworks.com/contact/">Contact</a></li>
-</ul>
-
 <article id="content" class="wrapper">
   
 <header>
@@ -60,18 +46,11 @@
 </ul>
 
 <hr>
-<div style="/* margin: 2em 0em 1em 0; */margin: 0;/* vertical-align: middle; *//* float: left; */">
+<div">
   <div style="float:left;">
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
-  
-  <!--<div style="float:right; display:none; ">-->
-  <!--  <span class="st_twitter_large" displaytext="Tweet"></span> -->
-  <!--  <span class="st_linkedin_large" displaytext="LinkedIn"></span> -->
-  <!--  <span class="st_reddit_large" displaytext="Reddit"></span>-->
-  <!--  <span class="st_email_large" displaytext="Email"></span> -->
-  <!--</div>-->
 </div>
 
 <p style="text-align: center;">
@@ -96,35 +75,11 @@
   </a>
 </p>
 
-<hr>
-<p>
-  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
-    <img src="https://dl.dropboxusercontent.com/u/19848482/vileworks/demo.gif">
-  </a>
-</p>
-
-<!--<hr>-->
-<!--<iframe src="http://redditjs.com/embed?width=600&amp;height=500&amp;postFinder=mostComments&amp;cssTheme=light&amp;showSubmit=true&amp;embedId=3qzht6&amp;url=http://nonsalant.github.io/contract/" -->
-<!--  frameborder="0" -->
-<!--  style="border:solid 1px #ccc;-->
-<!--    width:100%; -->
-<!--    height:600px;-->
-<!--    max-height:90vh;">-->
-<!--</iframe>-->
-
 </section>
 
 <footer class="footer">
   <hr>
   <p>Hosted on GitHub Pages. <a href="https://github.com/nonsalant/contract#contract" target="_blank" title="Opens in a new tab">Open repository.</a></p>
-  <hr>
-  <!-- ShareThis Buttons -->
-  <span class='st_reddit_hcount' displayText='Reddit'></span>
-  <span class='st_twitter_hcount' displayText='Tweet'></span>
-  <!--<span class='st_facebook_hcount' displayText='Facebook'></span>-->
-  <!--<span class='st_googleplus_hcount' displayText='Google +'></span>-->
-  <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-  <!--<span class='st_email_hcount' displayText='Email'></span>-->
 </footer>
 
 </article>
@@ -142,12 +97,6 @@
     scrollspeed: 60, // scrolling speed
     mousescrollstep: 60, // scrolling speed with mouse wheel (pixel)
     bouncescroll: true
-  });
-  
-  // Scroll Snap to editor
-  $(document).scrollsnap({
-    snaps: '#content, .top-menu, hr',
-    proximity: 10
   });
   
   // Lazy Load
