--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>FTP Contract: Signable contract that lives in a single file</title>
     <link rel="shortcut icon" href="http://vileworks.com/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--<link rel="stylesheet" href="stylesheets/github-light.css">-->
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
