--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
   </head>
 <body>
 
+<h1 style="text-transform: none; letter-spacing: 0.075em; font-size: 2.5em; margin: 1em auto;">FTP Contract</h1>
+
 <article id="content" class="wrapper">
-  
-<header>
-  <h1>
-    <a id="contract" class="anchor" href="#contract" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-    FTP Contract
-  </h1>
-  <h2>Generate a signable contract that lives in a single php file</h2>
-</header>
 
 <section>
 <ul>
