--- a/index.html
+++ b/index.html
@@ -28,18 +28,14 @@
   </head>
 <body>
 
-<h1 style="text-transform: none; letter-spacing: 0.075em; font-size: 2.5em; margin: 1em auto;">FTP Contract</h1>
+<h1 style="text-transform: none; letter-spacing: 0.075em; font-size: 2.5em; margin: 1em auto;">
+  <span style="font-family:'Open Sans Condensed', sans-serif; font-weight:700;letter-spacing: .075em;">FTP</span>
+  Contract
+</h1>
 
 <article id="content" class="wrapper">
 
 <section>
-<ul>
-  <li>Host it on your own domain</li>
-  <li>Can only be signed once</li>
-  <li>The resulting document can be downloaded as a PDF</li>
-</ul>
-
-<hr>
 <div">
   <div style="float:left;">
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
@@ -68,6 +64,13 @@
     Generate a new contract
   </a>
 </p>
+
+<hr>
+<ul>
+  <li>Host the stand-alone file on your own domain</li>
+  <li>Can only be signed once</li>
+  <li>The resulting document can be downloaded as a PDF</li>
+</ul>
 
 </section>
 
