text-transform: uppercase

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
 <body>
 
-<h1 style="text-transform: none; letter-spacing: 0.075em; font-size: 2.5em; margin: 1em auto;">
+<h1 style="text-transform: uppercase; letter-spacing: 0.075em; font-size: 2.5em; margin: 1em auto;">
   <span style="font-family:'Open Sans Condensed', sans-serif; font-weight:700;letter-spacing: .075em;">FTP</span>
   Contract
 </h1>
