--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <article id="content" class="wrapper">
 
 <section>
-<div">
+<h2>A signable contract that lives in a single file</h2>
+<div>
   <div style="float:left;">
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
