Updated contract-icon-big.png src

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p style="text-align: center;">
   <a href="http://vileworks.com/contract/generator/" title="Generate a new contract">
-    <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://dl.dropboxusercontent.com/u/19848482/vileworks/contract-icon-big.png">
+    <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks/contract/generator/contract-icon-big.png">
   </a>
 </p>
 
