--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
 <h2>A signable contract that lives in a single file</h2>
 <div>
   <div style="float:left;">
-    <a href="https://github.com/nonsalant/contract#ftp-contract">View on GitHub</a>
+    <a href="https://github.com/nonsalant/contract#ftp-contract" style="
+      display: block;
+      float: left;
+      text-align: center;
+      font-size: 1em;
+      line-height: 1em;
+      margin-right: 2em;
+      font-family: &quot;Open Sans Condensed&quot;, sans-serif;
+      font-weight: 800;
+      ">View on<br> GitHub
+    </a>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
