--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div>
   <div style="float:left;">
     <a href="https://github.com/nonsalant/contract#ftp-contract" style="
-      display: block;
+      display: block; display:none;
       float: left;
       text-align: center;
       font-size: 1em;
@@ -42,7 +42,7 @@
 </div>
 
 <p style="text-align: center;">
-  <a href="http://vileworks.com/contract/generator/" title="Generate a new contract">
+  <a href="https://github.com/nonsalant/contract#ftp-contract" title="View on GitHub">
     <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png">
   </a>
 </p>
