--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
   <a href="https://github.com/nonsalant/contract#ftp-contract" title="View on GitHub">
     <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png">
   </a>
+  <a href="https://github.com/nonsalant/contract#ftp-contract" style="
+      display: block;
+      float: left;
+      text-align: center;
+      font-size: 1em;
+      line-height: 1em;
+      margin-right: 2em;
+      font-family: &quot;Open Sans Condensed&quot;, sans-serif;
+      font-weight: 800;
+      width: 100%;
+      margin-bottom: 1em;
+      ">View on GitHub
+    </a>
 </p>
 
 <hr style="margin-top: 0;">
