--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
   </div>
 </div>
 
+<ul>
+  <li>Host the stand-alone file on your own domain</li>
+  <li>Can only be signed once</li>
+  <li>The resulting document can be downloaded as a PDF</li>
+</ul>
+
 <p style="text-align: center;">
   <a href="https://github.com/nonsalant/contract#ftp-contract" title="View on GitHub">
     <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png">
@@ -77,11 +83,12 @@
 </p>
 
 <hr>
-<ul>
-  <li>Host the stand-alone file on your own domain</li>
-  <li>Can only be signed once</li>
-  <li>The resulting document can be downloaded as a PDF</li>
-</ul>
+
+<ol>
+  <li>You create a PHP contract and upload it on your server.</li>
+  <li>Someone else signs it.</li>
+  <li>The PHP contract deletes itself from your server and leaves beind a static HTML contract.</li>
+</ol>
 
 </section>
 
