--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   </div>
 </div>
 
+<hr style="width:100%; clear:both;" />
+  
 <ul>
   <li>Host the stand-alone file on your own domain</li>
   <li>Can only be signed once</li>
