--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<hr style="width:100%; clear:both;" />
+<hr style="width:100%; clear:both; margin:1em 0 0 0" />
   
 <ul>
   <li>Host the stand-alone file on your own domain</li>
