--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
 </div>
-
-<hr style="width:100%; clear:both; margin:1em 0 0 0" />
   
-<ul>
+<ul style="clear:both; margin:1em 0 0 0" />
   <li>Host the stand-alone file on your own domain</li>
-  <li>Can only be signed once</li>
   <li>The resulting document can be downloaded as a PDF</li>
 </ul>
 
@@ -86,6 +83,7 @@
 
 <hr>
 
+<h2>How it works:</h2>
 <ol>
   <li>You create a PHP contract and upload it on your server.</li>
   <li>Someone else signs it.</li>
