--- a/index.html
+++ b/index.html
@@ -25,17 +25,6 @@
 <h2>A signable contract that lives in a single file</h2>
 <div>
   <div style="float:left;">
-    <a href="https://github.com/nonsalant/contract#ftp-contract" style="
-      display: block; display:none;
-      float: left;
-      text-align: center;
-      font-size: 1em;
-      line-height: 1em;
-      margin-right: 2em;
-      font-family: &quot;Open Sans Condensed&quot;, sans-serif;
-      font-weight: 800;
-      ">View on<br> GitHub
-    </a>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=star&amp;count=true&amp;size=large" height="30" width="150" frameborder="0" scrolling="0" style="width:150px; height: 30px;" allowtransparency="true"></iframe>
     <iframe src="http://ghbtns.com/github-btn.html?user=nonsalant&amp;repo=contract&amp;type=fork&amp;count=true&amp;size=large" height="30" width="140" frameborder="0" scrolling="0" style="width:140px; height: 30px;" allowtransparency="true"></iframe>
   </div>
@@ -47,9 +36,22 @@
 </ul>
 
 <p style="text-align: center;">
-  <a href="https://github.com/nonsalant/contract#ftp-contract" title="View on GitHub">
+  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo"
     <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png">
   </a>
+  <span style="
+    font-size: 1.15em;
+    line-height: 1rem;
+    border-bottom: solid 1px #ccc;
+    margin-right: 1em; ">
+    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
+      View demo
+    </a>
+  </span>
+</p>
+
+<hr style="margin-top: 0;">
+<p style="text-align:center;">
   <a href="https://github.com/nonsalant/contract#ftp-contract" style="
       display: block;
       float: left;
@@ -63,19 +65,6 @@
       margin-bottom: 1em;
       ">View on GitHub
     </a>
-</p>
-
-<hr style="margin-top: 0;">
-<p style="text-align:center;">
-  <span style="
-    font-size: 1.15em;
-    line-height: 1rem;
-    border-bottom: solid 1px #ccc;
-    margin-right: 1em; ">
-    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
-      View demo
-    </a>
-  </span>
   <a class="button" href="http://vileworks.com/contract/generator/" target="" title="Generate a new contract">
     Generate a new contract
   </a>
