--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
   </div>
 </div>
   
-<ul style="clear:both; margin:1em 0 0 0" />
+<ul style="clear:both; margin:2em 0 0 0" />
   <li>Host the stand-alone file on your own domain</li>
   <li>The resulting document can be downloaded as a PDF</li>
 </ul>
 
 <p style="text-align: center;">
-  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo"
-    <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png">
+  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
+    <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png" />
   </a>
   <span style="
     font-size: 1.15em;
     line-height: 1rem;
     border-bottom: solid 1px #ccc;
     margin-right: 1em; ">
-    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Demo">
+    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
       View demo
     </a>
   </span>
