--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     font-size: 1.15em;
     line-height: 1rem;
     border-bottom: solid 1px #ccc;
-    margin-right: 1em; ">
+    margin-right: 1em; "><br />
     <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
       View demo
     </a>
