--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 <p style="text-align: center;">
   <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
     <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png" />
-  </a>
+  </a><br />
   <span style="
     font-size: 1.15em;
     line-height: 1rem;
     border-bottom: solid 1px #ccc;
-    margin-right: 1em; "><br />
+    margin-right: 1em; ">
     <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
       View demo
     </a>
@@ -61,7 +61,6 @@
       margin-right: 2em;
       font-family: &quot;Open Sans Condensed&quot;, sans-serif;
       font-weight: 800;
-      width: 100%;
       margin-bottom: 1em;
       ">View on GitHub
     </a>
@@ -70,7 +69,7 @@
   </a>
 </p>
 
-<hr>
+<hr />
 
 <h2>How it works:</h2>
 <ol>
