--- a/index.html
+++ b/index.html
@@ -52,18 +52,24 @@
 
 <hr style="margin-top: 0;">
 <p style="text-align:center;">
-  <a href="https://github.com/nonsalant/contract#ftp-contract" style="
+  <span style="
+    font-size: 1.15em;
+    line-height: 1rem;
+    border-bottom: solid 1px #ccc;
+    margin-right: 1em; ">
+    <a href="https://github.com/nonsalant/contract#ftp-contract" style="
       display: block;
       float: left;
       text-align: center;
       font-size: 1em;
       line-height: 1em;
       margin-right: 2em;
-      font-family: &quot;Open Sans Condensed&quot;, sans-serif;
+      font-family: 'Open Sans Condensed', sans-serif;
       font-weight: 800;
       margin-bottom: 1em;
       ">View on GitHub
     </a>
+  </span>
   <a class="button" href="http://vileworks.com/contract/generator/" target="" title="Generate a new contract">
     Generate a new contract
   </a>
