--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </ul>
 
 <p style="text-align: center;">
-  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
+  <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo (opens in a new tab)">
     <img style="max-width: calc(100% + 4em); margin: 0 -2em; " src="https://vileworks.com/contract/generator/contract-icon-big.png" />
   </a><br />
   <span style="
@@ -44,7 +44,7 @@
     line-height: 1rem;
     border-bottom: solid 1px #ccc;
     margin-right: 1em; ">
-    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo">
+    <a href="http://vileworks.com/contract/test.php" target="_blank" title="Sign a demo (opens in a new tab)">
       View demo
     </a>
   </span>
@@ -56,18 +56,11 @@
     font-size: 1.15em;
     line-height: 1rem;
     border-bottom: solid 1px #ccc;
-    margin-right: 1em; ">
-    <a href="https://github.com/nonsalant/contract#ftp-contract" style="
-      display: block;
-      float: left;
-      text-align: center;
-      font-size: 1em;
-      line-height: 1em;
-      margin-right: 2em;
-      font-family: 'Open Sans Condensed', sans-serif;
-      font-weight: 800;
-      margin-bottom: 1em;
-      ">View on GitHub
+    margin-right: 1em; 
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-weight: 800;">
+    <a href="https://github.com/nonsalant/contract#ftp-contract" title="Open repository">
+      View on GitHub
     </a>
   </span>
   <a class="button" href="http://vileworks.com/contract/generator/" target="" title="Generate a new contract">
