--- a/index.html
+++ b/index.html
@@ -105,15 +105,14 @@
   $('img, svg').lazyload();
 </script>
 
-<script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-  try {
-    var pageTracker = _gat._getTracker("UA-1028654-2");
-  pageTracker._trackPageview();
-  } catch(err) {}
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-1028654-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag("js", new Date());
+
+  gtag("config", "UA-1028654-5");
 </script>
 
 <!--ShareThis Scripts -->
